@@ -68,6 +68,10 @@
       page-object rocks!
     </div>
 
+    <div data-entity="test">
+      found using data-entity
+    </div>
+
     <span id="span_id" name="span_name" class="span_class" title="span_title">
       My alert
     </span>
